@@ -88,7 +88,7 @@ First you need to register the new magic function into ipython shell.
     (i.e. :file:`~/.ipython/profile_default/startup/doit_magic.ipy`)
     with the following content::
 
-        from doit.tools import load_ipython_extension
+        from doit import load_ipython_extension
         load_ipython_extension()
 
 Then you can define your `task_creator` functions and invoke them with `%doit`
