@@ -7,11 +7,12 @@ Changes
 0.31.0 (*unreleased*)
 =====================
 
+ - Drop Python 3.3 support
  - Fix GH-#171 Passing environment variables to CmdAction
  - Fix GH-#184 parametrize script name
- - Drop Python 3.3 support
  - CmdParse now support getting values from OS environment variables
  - option `seek_file` control by ENV var `DOIT_SEEK_FILE`
+ - GH-#192 ipython extension uses `load_ipython_extension`
 
 
 0.30.3 (*2017-02-20*)
